<resources>
    <string name="app_name">SekitarKita</string>
    <string name="action_about">Tentang</string>
    <string name="app_author">Author : Ghuniyu Fattah Rozaq</string>
    <string name="app_describ">Aplikasi ini digunakan untuk melakukan Tracking terhadap Bluetooth device yang berada disekitar Anda</string>
    <string name="apps_desc_short">Aplikasi SekitarKita membantu Anda dalam melakukan tracking titik singgung anda dengan orang lain… (more)</string>
    <string name="apps_desc">Aplikasi SekitarKita membantu Anda dalam melakukan tracking titik singgung anda dengan orang lain menggunakan koneksi Bluetooth. \n\nketika suatu saat seseorang yang pernah berkontak terinfeksi, maka aplikasi akan memberikan informasi untuk anda dapat mengambil tindakan yang di perlukan</string>
    <string name="interaction">Interaksi</string>
    <string name="self_check">Lakukan Pemeriksaan Mandiri</string>
    <string name="report">Lapor Infeksi</string>
    <string name="share_content">Mari bergabung untuk mencegah penyebaran %1$s. Install aplikasi sekitarkita untuk mencatat riwayat singgung dan peringatan dini %2$s. Kunjungi link berikut https://sekitarkita.id/ untuk info lebih lanjut atau download Aplikasinya di https://sekitarkita.id/download</string>
    <string name="share">Bagikan SekitarKita</string>
    <string name="bluetooth_unavailable">Perangkat Anda tidak memiliki Bluetooth</string>
    <string name="bluetooth_active">Bluetooth Aktif</string>
    <string name="mac_location" translatable="false">Anda Dapat melihat *Alamat Bluetooth* pada Bagian Status Handphone</string>
    <string name="report_disclaimer" translatable="false">Pastikan anda memasukkan data dengan sebenar - benarnya , karena aplikasi akan membagikan peringatan dini keseluruh pengguna yang memiliki riwayat bersinggungan dengan anda.</string>
    <string name="status" translatable="false">Saya %1$s</string>
    <string name="report_title">Saya melaporkan bahwa</string>
    <string name="infected">Saya adalah PDP</string>
    <string name="under_observation">Saya adalah ODP</string>
    <string name="healthy">Saya Sehat</string>
    <string name="internal_error">Terdapat kesalahan pada Server</string>
    <string name="network_failure">Terjadi kesalahan pada Jaringan</string>
    <string name="unknown_failure">Terjadi kesalahan</string>
    <string name="are_you_sure">Apakah Anda yakin?</string>
    <string name="placeholder_mac">AA:11:BB:22:CC:33</string>
    <string name="history_fetch_failed">Gagal mengambil riwayat singgung</string>
    <string name="confirmed">Saya Confirmed Positif</string>
    <string name="never_ask">Saya Ingin Anonim</string>
    <string name="show_mac">Lihat MAC</string>
    <string name="save">Simpan</string>
    <string name="android_o_info">Khusus untuk Pengguna Android Oreo, Pie, dan Android 10. Anda perlu memasukkan MAC Address Bluetooth Anda Secara Manual.</string>
    <string name="mac_address_confirm">Apakah Bluetooth Address ini Benar?</string>
    <string name="correct">Benar</string>
    <string name="bluetooth_saved">Bluetooth Address Tersimpan</string>
    <string name="incorect_mac_address">Bluetooth Address Tidak Sesuai</string>
    <string name="request_location_permission">Aplikasi SekitarKita membutuhkan Izin Lokasi dan Bluetooth untuk dapat digunakan</string>
    <string name="location_permission">Izin Lokasi</string>
    <string name="understand">Saya Mengerti</string>
    <string name="exit">Keluar</string>
    <string name="confirm_healthy">Saya menyatakan bahwa saya benar-benar sehat</string>
    <string name="cancel">Batalkan</string>
    <string name="min_char">Minimal 5 Karakter</string>
    <string name="max_char">Maksimal 10 Karakter</string>
    <string name="thankyou">Terimakasih</string>
    <string name="confirm">Konfirmasi</string>
    <string name="sekitarkita">SekitarKita</string>
    <string name="anonym">Anonim</string>
    <string name="autostart_manual">Gagal membuka autostart, silahkan izinkan manual di pengaturan keamanan</string>
    <string name="warning">Perhatian</string>
    <string name="autostart_request">Agar dapat berfungsi optimal, Aplikasi mungkin Meminta Izin untuk mulai otomatis (autostart)</string>
    <string name="self_check_message">Kami perlu memastikan bahwa anda sedang dalam keadaan sehat</string>
    <string name="oops">Oops!</string>
    <string name="ignore">Abaikan</string>
    <string name="terminate">Hentikan SekitarKita</string>
    <string name="version">Versi : %1$s-%2$d</string>
    <string name="information">Informasi Penting</string>
    <string name="positive">Positif</string>
    <string name="placeholder_zero">0</string>
    <string name="recover">Sembuh</string>
    <string name="death">Meninggal</string>
    <string name="province">Provinsi</string>
    <string name="provided_by">Data ini disediakan oleh :</string>
    <string name="indonesia">Indonesia</string>
    <string name="province_data">Data Sebaran di Tiap Provinsi</string>
    <string name="phone">Nomor Telepon</string>
    <string name="wrong_phone">Format Telepon Salah</string>
    <string name="title_update">Ada Update Terbaru</string>
    <string name="title_update_message">Silahkan update untuk mendapatkan fitur yang terbaru</string>
    <string name="in_partners">SekitarKita bekerjasama dengan :</string>
    <string name="fake_gps_message">Anda terdeteksi menggunakan Fake GPS</string>
    <string name="observe_area">Wilayah Pantauan</string>
    <string name="observe_area_info">Anda berada dalam wilayah pantauan. Data anda akan dikelola dan di awasi oleh Pemerintah "%1$s"</string>
    <string name="attention">Perhatian...!</string>
    <string name="observer_report">anda berada dalam area pantau $1%s, Pemerintah Terkait akan melakukan Verifikasi Laporan anda</string>
    <string name="name">Nama</string>
    <string name="nik">NIK</string>
    <string name="unknown">Tidak diketahui</string>
    <string name="trip_history">Riwayat Perjalanan</string>
    <string name="history">Riwayat</string>
    <string name="home">Beranda</string>
    <string name="stats">Statistik</string>
    <string name="bluetooth_address">Bluetooth Address</string>
    <string name="user_guide">Panduan Pengguna</string>
    <string name="info_1">Khusus untuk pengguna android Oreo, Pie, dan Android 10. Anda perlu memasukkan MAC Address Bluetooth anda secara manual.</string>
    <string name="info_2">Anda dapat memlihat *Bluetooth Address* pada bagian status handphone atau lihat pada gambar</string>
    <string name="show_on_map">Lihat di maps</string>
    <string name="start">Mulai</string>
    <string name="next">Selanjutnya</string>
    <string name="yes">IYA</string>
    <string name="no">Tidak</string>
    <string name="quest1_info">Gunakan termometer untuk mengukur suhu tubuh anda</string>
    <string name="quest_1">Apakah anda sedang demam atau dalam 14 hari terakhir pernah demam ?</string>
    <string name="quest_subtitle">Berikut adalah pertanyaan singkat untuk mengetahui deteksi dini covid-19</string>
    <string name="quest_title">Deteksi Dini Covid 19</string>
    <string name="quest_2">Apakah anda memiliki gejala pernapasan dibawah ini ?</string>
    <string name="quest_2_info">Bisa lebih dari satu gejala, atau jika anda rasa itu hanya gejala biasa, silahkan lewati pertanyaan ini.</string>
    <string name="cough">Batuk</string>
    <string name="flu">Pilek</string>
    <string name="BD">Sesak Nafas</string>
    <string name="sore_throat">Sakit Tenggorokan</string>
    <string name="quest_3">Apakah dalam 14 hari terakhir sebelum timbul gejala pernah ke luar negeri yang memiliki transmisi lokal COVID-19 ?</string>
    <string name="quest_3_info">Malaysia, Singapura, China, dll dalam Daftar Negara Terpapar</string>
    <string name="quest_4">Apakah dalam 14 hari terakhir sebelum timbul gejala pernah ke kota di Indonesia yang memiliki transmisi lokal COVID-19?</string>
    <string name="quest_4_info">Jakarta, Depok, Bandung, Solo, Bogor, Bali, Semarang dll</string>
    <string name="quest_5">Apakah Anda pernah berkontak fisik dengan pasien Positif COVID-19 atau mengunjungi fasilitas kesehatan berhubungan dengan pasien konfirmasi COVID-19?</string>
    <string name="quest_5_info">Malaysia, Singapura, China, dll dalam Daftar Negara Terpapar</string>
    <string name="result">Maka disimpulkan bahwa</string>
    <string name="submit">Lihat Hasil</string>
    <string name="empty_data">Data tidak ditemukan</string>
    <string name="something_went_wrong">Oops! Terjadi Kesalahan</string>
    <string name="refresh">Muat ulang</string>
    <string name="report_confirmation">Saya menyatakan bahwa saya benar-banar %1$s. Berikut kontak saya</string>
    <string name="odp_desc">Orang Dalam Pemantauan (ODP)</string>
    <string name="pdp_desc">"Pasien Dalam Pemantauan (PDP) "</string>
    <string name="otg_desc">Orang Tanpa Gejala (OTG)</string>
    <string name="positive_desc">Pasien Positif</string>
    <string name="traveler_desc">Pelaku Perjalanan</string>
    <string name="travel_history_detail">Tulis riwayat perjalanan anda....</string>
    <string name="pre_test">Sebelum Memulai Test Silahkan isi data diri anda.</string>
    <string name="pre_test_help">Isi Sesuai Kartu identitas anda ya.</string>
    <string name="im_positif">Saya Positif</string>
    <string name="im_odp">Saya Adalah ODP</string>
    <string name="im_pdp">Saya Adalah PDP</string>
    <string name="im_otg">Saya Adalah OTG</string>
    <string name="im_traveler">Saya Pelaku Perjalanan</string>
    <string name="im_healthy">Saya Sehat</string>
    <string name="info">Info</string>
    <string name="test_retake">Ubah Jawaban</string>
    <string name="close">Tutup</string>
    <string name="odp">ODP</string>
    <string name="pdp">PDP</string>
    <string name="no_device_id">Anda belum memiliki Device ID, silahkan memasukan di halaman info</string>
    <string name="general_error">Terjadi kesalahan, coba ulangi lagi.</string>
    <string name="try_again">Ulangi</string>
    <string name="success">Berhasil</string>
    <string name="app_permission">Izin Aplikasi</string>
    <string name="location_required">Aplikasi tidak dapat berjalan tanpa Izin Lokasi</string>
    <string name="its_open_source">Aplikasi Ini Open Source</string>
    <string name="how_contribute">Siapapun dapat berkontribusi mengembangkan aplikasi melalui sekitarkitamovement@gmail.com atau github.com/ghuniyu</string>
    <string name="contributor">Kontributor</string>
    <string name="thanks_for">Terimakasih untuk</string>
    <string name="thanks">Terimakasih</string>
    <string name="contributors">Ghuniyu Fattah Rozaq\nAlif Jafar\nGilang Kurniaji\nDeden Gobel\nFeri Harjulianto\nWilly Robertus\nGinanjar Fahrul\nMuhammad Ilham\nYusuf Mantra\nIsa Setiawan\nDan masih banyak lagi...</string>
    <string name="description">Deskripsi</string>
    <string name="open_map">Buka Lokasi di Maps</string>
    <string name="device_status">Status Device</string>
    <string name="interaction_desc">Aplikasi ini mencatat bahwa smartphone anda telah bersinggungan dengan device lain</string>
    <string name="interaction_detail">Detail Interaksi</string>
    <string name="registered_device">Device ini terdaftar sebagai user SekitarKita</string>
    <string name="unknown_device">Device tidak dikenali</string>
    <string name="interaction_description">Singgungan anda tercatat pada\n%1$s WIB dengan device\n%2$s</string>
    <string name="good_moring">Selamat Pagi</string>
    <string name="good_afternoon">Selamat Siang</string>
    <string name="good_evening">Selamat Sore</string>
    <string name="good_night">Selamat Malam</string>
    <string name="failed_get_location">Gagal Mendapatkan Lokasi Anda</string>
    <string name="invalid_lat_long">Kesalahan Latitude atau Longitude</string>
    <string name="originArea">Daerah Asal</string>
    <string name="destArea">Daerah Tujuan</string>
</resources>