<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="18dp">

    <EditText
        android:visibility="gone"
        android:id="@+id/input_nik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nik"
        android:inputType="number"
        android:textSize="14sp" />

    <EditText
        android:visibility="gone"
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textSize="14sp" />

</LinearLayout>