<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/province"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/province"
        app:layout_constraintBottom_toTopOf="@id/hr"
        app:layout_constraintEnd_toStartOf="@id/positive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/positive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/positive"
        app:layout_constraintBaseline_toBaselineOf="@id/province"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/recover"
        app:layout_constraintStart_toEndOf="@id/province"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recover"
        app:layout_constraintBaseline_toBaselineOf="@id/province"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/death"
        app:layout_constraintStart_toEndOf="@id/positive"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/death"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/death"
        app:layout_constraintBaseline_toBaselineOf="@id/province"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/recover"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/province" />

</androidx.constraintlayout.widget.ConstraintLayout>